<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Enter</string>
    <string name="plot_button_text">Plot</string>
    <string name="output">\u2026</string>
    <string name="title_activity_display_plot">Plot</string>
    
    <string name="string_from">from</string>
    <string name="string_to">to</string>
    <string name="string_x_axis">x-axis</string>
    <string name="string_y_axis">y-axis</string>
    <string name="string_save">save</string>
    
    <string name="string_enter_expression">Enter expression</string>
    
    <string name="drawerOpen">Opened</string>
    <string name="drawerClose">Closed</string>
    
    <string name="action_plot">Plot</string>
    <string name="action_plot_3d">Plot 3D</string>
    <string name="action_clear">Clear</string>
    <string name="action_new_function">New function</string>
    
    <string name="action_toggle_normal_mode">Regular input</string>
    <string name="action_toggle_parametric_mode">Parametric input</string>
    <string name="action_toggle_polar_mode">Polar input</string>
    
    <string name="action_show_builtin_defs">Show built-in definitions</string>
    <string name="action_show_user_defs">Show user definitions</string>
    
    <string name="function_dialog_title">New function</string>
    
    <string-array name="listitems">
        <item>Main</item>
        <item>Plot options</item>
        <item>Plot menu</item>
        <item>Function definitions</item>
        <item>Constant definitions</item>
        <item>Preferences</item>
    </string-array>
    
    <string-array name="axistypes">
        <item>Linear</item>
        <item>Logarithmic</item>
    </string-array>
  
	<string  name="color_picker_content_description">Color selector</string>
    
</resources>
