<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  	  xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.knpl.simplecalculator.SimpleCalculatorActivity" >
    
    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_plot"
        android:title="@string/action_plot"
        android:icon="@drawable/ic_action_picture"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_plot_3d"
        android:title="@string/action_plot_3d"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_toggle_normal_mode"
        android:title="@string/action_toggle_normal_mode"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_toggle_parametric_mode"
        android:title="@string/action_toggle_parametric_mode"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_toggle_polar_mode"
        android:title="@string/action_toggle_polar_mode"
        app:showAsAction="never" />

</menu>
