<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true" >
        
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="8dp"
	    android:animateLayoutChanges="true" >
	    
		<ImageView
	       	android:id="@+id/color_indicator"
	       	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	       	android:background="@drawable/ic_color_indicator"
	       	android:contentDescription="@string/color_picker_content_description" />
	    
	    <EditText
	        android:id="@+id/expression"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginLeft="8dp"
	        android:singleLine="true"
	        android:hint="@string/string_enter_expression" />
	    
	    <EditText
	        android:id="@+id/expression2"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="8dp"
	        android:singleLine="true"
	        android:hint="@string/string_enter_expression" 
	        android:visibility="gone" />
	
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/range"
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="8dp"
	    android:visibility="gone"
	    android:animateLayoutChanges="true" >  
	    
	    <TextView 
	        android:id="@+id/range_label"
	        android:layout_width="40dp"
	        android:layout_height="40dp" 
	        android:textSize="20sp"
	        android:textColor="#fff"
	        android:gravity="center" />
	    
	    <EditText
	        android:id="@+id/range_from"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginLeft="8dp"
	        android:singleLine="true"
	        android:hint="@string/string_from" />
	    
	    <EditText
	        android:id="@+id/range_to"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="8dp"
	        android:singleLine="true"
	        android:hint="@string/string_to" />
	
	</LinearLayout>

	<ListView 
     	android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />
     
 </LinearLayout>
