<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    tools:context="com.knpl.simplecalculator.SimpleCalculatorActivity" 
	    android:isScrollContainer="false" >
	    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.knpl.simplecalculator.SimpleCalculatorActivity" >   
	    
	    <!-- X axis section -->
	    <TextView 
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:textSize="20sp"
	   	    android:text="@string/string_x_axis" />
	    
	    <Spinner
	        android:id="@+id/xType"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp" />
	        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	       	
	        
	       	<EditText
				android:id="@+id/xMin"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="10dp"
				android:hint="@string/string_from"
				android:inputType="textNoSuggestions" />
	       	
	       	<EditText
	       	    android:id="@+id/xMax"
	       	    android:layout_width="0dp"
	       	    android:layout_height="wrap_content"
	       	    android:layout_weight="1"
	       	    android:layout_margin="10dp"
	       	    android:hint="@string/string_to"
	       	    android:inputType="textNoSuggestions" />
	        
	    </LinearLayout>
	    <!-- End X axis section -->
	    
	    <!-- Y axis section -->
	    <TextView 
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:textSize="20sp"
	   	    android:text="@string/string_y_axis"/>
	    
	    <Spinner
	        android:id="@+id/yType"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
	       	<EditText
				android:id="@+id/yMin"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="10dp"
				android:hint="@string/string_from" />
	       	
	       	<EditText
	       	    android:id="@+id/yMax"
	       	    android:layout_width="0dp"
	       	    android:layout_height="wrap_content"
	       	    android:layout_weight="1"
	       	    android:layout_margin="10dp"
	       	    android:hint="@string/string_to" />
	        
	    </LinearLayout>
	    <!-- End Y axis section -->
	    
	    <TextView 
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:textSize="20sp"
	   	    android:text="@string/string_theta_axis"/>
	    
	    <!-- angle section -->
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
	       	<EditText
				android:id="@+id/thetaMin"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="10dp"
				android:hint="@string/string_from" />
	       	
	       	<EditText
	       	    android:id="@+id/thetaMax"
	       	    android:layout_width="0dp"
	       	    android:layout_height="wrap_content"
	       	    android:layout_weight="1"
	       	    android:layout_margin="10dp"
	       	    android:hint="@string/string_to" />
	        
	    </LinearLayout>
	    <!-- End angle section -->
	    
	    <Button
	        android:id="@+id/apply"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/string_save" />

	</LinearLayout>
</ScrollView>
